--- a/public/main.css
+++ b/public/main.css
@@ -9,14 +9,9 @@ body {
   font-family: 'Source Sans Pro', sans-serif;
 }
 
-.typewriter {
-  border-right: solid 5px transparent;
-  white-space: nowrap;
-  overflow: hidden;
+h1 {
   font-family: 'Source Sans Pro', sans-serif;
   font-size: 50px;
-  /*animation:
-  animated-text 1.2s steps(17, end) 1s 1 normal both*/
 }
 
 /* text animation */
