--- a/public/main.css
+++ b/public/main.css
@@ -2,7 +2,8 @@
 
 body {
   background-color: #0f2c41;
-  background-image: url("https://i.imgur.com/PFnfpkq.png");
+  background-image: url("bg-pattern.png");
+	background-repeat: repeat;
   text-align: center;
   font-weight: 700;
 	color: #fff;
